# dyncf

./: .env_sample  Cargo.toml  README.md  deploy.sh
.github/workflows/: rust.yml
src/: main.rs
