[package]
name = "dyncf"
version = "0.1.0"
edition = "2024"
authors = ["Pablushka <pablushka@nomades.com.ar"]
description = "Dynamic Cloudflare DNS updater"
license = "MIT"

repository = "https://github.com/yourusername/dyncf"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
serde_json = "1.0.140"
dotenv = "0.15.0"